# mission-data-pipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: 01_binary_ingest.py  02_csv_to_hdf5.py
src/mdp/: __init__.py
src/mdp/cli/: main.py
src/mdp/core/: __init__.py  base.py  pipeline.py  registry.py
src/mdp/models/: __init__.py  dataset.py  frame.py  packet.py  parameter.py
src/mdp/observability/: __init__.py  hooks.py  logging.py  metrics.py
src/mdp/plugins/: __init__.py
src/mdp/plugins/extractors/: binary.py  csv.py
src/mdp/plugins/loaders/: csv.py  hdf5.py  parquet.py
src/mdp/plugins/transformers/: calibration.py  decom.py  filter.py
tests/: conftest.py  test_core_pipeline.py  test_models_dataset.py  test_models_packet.py  test_observability.py  test_plugins_extractor_binary.py  test_plugins_loaders.py  test_plugins_transformers.py
