[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-data-pipeline"
version = "0.1.0"
description = "A lightweight, modular ETL framework for scientific and space telemetry data"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Northflow Technologies AS", email = "tech@northflow.no" }]
keywords = ["telemetry", "etl", "space", "ccsds", "pipeline", "esa", "nasa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "h5py>=3.10",
    "pydantic>=2.5",
    "rich>=13.7",
    "click>=8.1",
    "structlog>=24.1",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff==0.15.2",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
mdp = "mdp.cli.main:cli"

[project.urls]
Homepage = "https://northflow.no"
Repository = "https://github.com/northflowlabs/mission-data-pipeline"
Issues = "https://github.com/northflowlabs/mission-data-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=mdp --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
